@@ -12,6 +12,7 @@ import org.springframework.jdbc.datasource.TransactionAwareDataSourceProxy;
 import org.springframework.stereotype.Component;
 
 import javax.sql.DataSource;
+import java.lang.reflect.InvocationTargetException;
 
 @Component
 public class DomaConfig implements Config {
@@ -22,21 +23,39 @@ public class DomaConfig implements Config {
 
     private SqlFileRepository sqlFileRepository;
 
+    /**
+     *
+     */
     public DomaConfig() {
     }
 
+    /**
+     * @param dataSource ???
+     */
     @SuppressWarnings("SpringJavaAutowiringInspection")
     @Autowired
     public void setDataSource(DataSource dataSource) {
         this.dataSource = new TransactionAwareDataSourceProxy(dataSource);
     }
 
+    /**
+     * @param domaDialect ???
+     * @throws ClassNotFoundException
+     * @throws IllegalAccessException
+     * @throws InstantiationException
+     * @throws NoSuchMethodException
+     * @throws InvocationTargetException
+     */
     @Autowired
     public void setDialect(@Value("${doma.dialect}") String domaDialect)
-            throws ClassNotFoundException, IllegalAccessException, InstantiationException {
-        this.dialect = (Dialect) Class.forName(domaDialect).newInstance();
+            throws ClassNotFoundException, IllegalAccessException, InstantiationException
+            , NoSuchMethodException, InvocationTargetException {
+        this.dialect = (Dialect) Class.forName(domaDialect).getConstructor().newInstance();
     }
 
+    /**
+     * @param springProfilesActive ???
+     */
     @Autowired
     public void setSqlFileRepository(@Value("${spring.profiles.active}") String springProfilesActive) {
         // develop モードの時は SQL ファイルがキャッシュされないようにする
